@@ -2738,7 +2738,7 @@ const BUILT_IN commands[] = {
   "AlarmClock", "Prompt for a length of time and start an alarm clock",
   "CancelAlarm","Cancels an alarm",
   "Action", "Executes an action for the active window (same as in keymap)",
-  "Notification", "Shows a notification on screen, specify header, then message.",
+  "Notification", "Shows a notification on screen, specify header, then message, and an optional icon.",
   "PlayDVD"," Plays the inserted CD or DVD media from the DVD-ROM Drive!",
   "Skin.ToggleSetting"," Toggles a skin setting on or off",
   "Skin.SetString"," Prompts and sets skin string",
@@ -3219,8 +3219,10 @@ int CUtil::ExecBuiltIn(const CStdString& execString)
     StringUtils::SplitString(strParameterCaseIntact,",",params);
     if (params.size() < 2)
       return -1;
-
-    g_application.m_guiDialogKaiToast.QueueNotification(params[0],params[1]);
+    if (params.size() == 3)
+      g_application.m_guiDialogKaiToast.QueueNotification(params[2],params[0],params[1]);
+    else
+      g_application.m_guiDialogKaiToast.QueueNotification(params[0],params[1]);
   }
   else if (execute.Equals("cancelalarm"))
   {
